--- a/css/styles-flex-hover.css
+++ b/css/styles-flex-hover.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto';
   color: var(--main-text-color);
   font-size: 14px;
   line-height: 1.71;
@@ -151,7 +151,11 @@ footer .contacts-item a {
   line-height: 1.71;
 }
 /* Features */
-
+.features-list {
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+}
 .features .title {
   visibility: hidden;
 }
@@ -169,12 +173,33 @@ footer .contacts-item a {
 .we-do a {
   text-decoration: none;
 }
-
+.we-do-list {
+  display: flex;
+  justify-content: space-around;
+}
+.we-do-item {
+  display: block;
+  position: relative;
+}
+.we-do .item-image {
+  display: block;
+  background-color: unset;
+}
 .we-do .item-title {
   font-size: 14px;
   color: #ffffff;
-
+  text-align: center;
   background-color: rgba(47, 48, 58, 0.8);
+  width: 100%;
+  position: absolute;
+  left: 0px;
+  bottom: -7px;
+  box-sizing: border-box;
+  padding: 10px 5px;
+  opacity: 0;
+}
+.we-do-item:hover .item-title {
+  opacity: 1;
 }
 
 /* Team */
@@ -185,14 +210,19 @@ footer .contacts-item a {
   font-size: 16px;
   text-align: center;
 }
-
+.team-list {
+  display: flex;
+  justify-content: space-around;
+}
 .team .item-title {
   font-size: 16px;
   line-height: 1.18;
   font-weight: 500;
   text-transform: none;
 }
-
+.social {
+  display: flex;
+}
 .social-item a:hover,
 .social-item a:focus {
   background-color: var(--active-color);
@@ -202,7 +232,10 @@ footer .contacts-item a {
 .clients ul {
   list-style-type: none;
 }
-
+.clients-list {
+  display: flex;
+  justify-content: space-around;
+}
 .clients-item a:hover,
 .clients-item a:focus {
   background-color: var(--active-color);
@@ -210,7 +243,9 @@ footer .contacts-item a {
 
 /* PORTFOLIO PAGE */
 /* Main */
-
+.works {
+  text-align: center;
+}
 .our-works h1 {
   visibility: hidden;
 }
@@ -222,17 +257,34 @@ footer .contacts-item a {
 }
 .filters-list {
   text-align: center;
+  /* display: flex; */
+  /* justify-content: center; */
 }
 .our-works .button {
   letter-spacing: 0.03em;
   line-height: 1.62;
   margin-right: 10px;
 }
-
-.item-link {
-  text-decoration: none;
+.works {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
+.works img {
+  display: block;
+}
+.works-item {
+  width: 370px;
+  position: relative;
+}
+.item-link {
+  display: block;
+  text-decoration: none;
+}
+.item-image {
+  background-color: var(--active-color);
+}
 .item-title {
   color: var(--additional-text-color);
   font-size: 18px;
@@ -251,4 +303,18 @@ footer .contacts-item a {
   color: #ffffff;
   font-size: 18px;
   line-height: 1.56;
+  position: absolute;
+  text-align: left;
+  top: 0px;
+  left: 0px;
+  opacity: 0;
+}
+.works-item:hover {
+  cursor: pointer;
+}
+.works-item:hover img {
+  opacity: 0.1;
+}
+.works-item:hover .item-description {
+  opacity: 1;
 }
