--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,7 @@ footer .contacts-item a {
   letter-spacing: 0.06em;
   text-align: center;
   background-color: #f5f4fa;
+  cursor: pointer;
 }
 .button.main {
   color: #ffffff;
@@ -227,8 +228,11 @@ footer .contacts-item a {
   letter-spacing: 0.03em;
   line-height: 1.62;
   margin-right: 10px;
+  cursor: pointer;
 }
-
+.shadow {
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
 .item-link {
   text-decoration: none;
 }
@@ -244,7 +248,7 @@ footer .contacts-item a {
   color: var(--main-text-color);
   font-size: 16px;
   line-height: 1.87;
-  font-weight: normal;
+  font-weight: 400;
   letter-spacing: 0.03em;
 }
 .item-description {
